k8s/traffic-splitting/deploy-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-v2
spec:
  replicas: 2 # Nur 20% des Traffics bekommt die neue Version
  selector:
    matchLabels:
      version: v2
  template:
    metadata:
      labels:
        version: v2
    spec:
      containers:
        - name: my-app
          image: my-app:v2
