k8s/traffic-splitting/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    version: v1 # Standardmäßig wird der Traffic an die alte Version gesendet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
